Localalize lib import

--- a/gapminder-clone/index.html
+++ b/gapminder-clone/index.html
@@ -29,7 +29,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/d3.min.js"></script>
-<script src="https://unpkg.com/d3-marcon@2.0.2/build/d3-marcon.min.js"></script>
+<script src="js/d3-marcon.min.js"></script>
 <!-- Custom JS -->
 <script src="js/main.js"></script>
 
